# alphafold3-pytorch

./: .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alphafold3_pytorch.nimble  contibuting.sh  contribute.sh  install-nim.sh  pyproject.toml  train.py
.github/workflows/: lint.yml  publish.yaml  publish.yml  test.yml
alphafold3_pytorch/: Untitled.ipynb  __init__.py  alphafold3.py  app.py  attention.py  cli.py  confidence.py  configs.py  eval.py  geom_utils.py  inputs.py  life.py  mocks.py  modules.py  nlm.py  pdb_dataset_curation.py  plm.py  tensor_typing.py  testing.cif  todo_modules.py  train.py  trainer.py  typing.py  version.py
alphafold3_pytorch/common/: amino_acid_constants.py  biomolecule.py  dna_constants.py  ligand_constants.py  mmcif_metadata.py  paper_constants.py  rna_constants.py
alphafold3_pytorch/data/: atom_datamodule.py  data_pipeline.py  errors.py  kalign.py  mmcif_parsing.py  mmcif_writing.py  mnist_datamodule.py  msa_pairing.py  msa_parsing.py  pdb_weighted_sampling.py  template_parsing.py  weighted_pdb_dataset.py  weighted_pdb_sampler.py
alphafold3_pytorch/data/chemical/: A.cif  ALA.cif  ARG.cif  ASN.cif  ASP.cif  C.cif  CYS.cif  DA.cif  DC.cif  DG.cif  DT.cif  G.cif  GLN.cif  GLU.cif  GLY.cif  HIS.cif  ILE.cif  LEU.cif  LYS.cif  MET.cif  PHE.cif  PRO.cif  SER.cif  THR.cif  TRP.cif  TYR.cif  U.cif  VAL.cif
alphafold3_pytorch/data/components/: life.py
alphafold3_pytorch/models/: alphafold3_module.py
alphafold3_pytorch/models/components/: alphafold3.py  attention.py  constants.py
alphafold3_pytorch/models/components/callbacks/: ema.py
alphafold3_pytorch/modules/: basic_models.py  confidence.py  diffusion.py  embedders.py  msa.py  pairformer.py
alphafold3_pytorch/utils/: __init__.py  data_utils.py  helpers.py  instantiators.py  logging_utils.py  model_utils.py  rich_utils.py  typing.py  utils.py
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  ema.yaml  last_model_checkpoint.yaml  learning_rate_monitor.yaml
configs/data/: atom.yaml  mnist.yaml
configs/experiment/: alphafold3_initial_training.yaml
configs/hparams_search/: atom_optuna.yaml
configs/model/: alphafold3.yaml  mnist.yaml
configs/strategy/: ddp_spawn.yaml
configs/trainer/: default.yaml
data/ccd_data/: components_smiles.json
data/pdb_data/data_caches/template/train_templates/: 7a4d-assembly1A_protein_pdball_230102_db.m8  7a4d-assembly1C_protein_pdball_230102_db.m8
data/pdb_data/train_mmcifs/a4/: 7a4d-assembly1.cif
data/test/: 209d-assembly1.cif  7a4d-assembly1.cif  interface_cluster_mapping.csv  ligand_chain_cluster_mapping.csv  nucleic_acid_chain_cluster_mapping.csv  peptide_chain_cluster_mapping.csv  protein_chain_cluster_mapping.csv
data/test/afdb_data/data_caches/train/1a00_A/a3m/: bfd_uniclust_hits.a3m  mgnify_hits.a3m  uniref90_hits.a3m
data/test/afdb_data/data_caches/train/1a00_A/hhr/: pdb70_hits.hhr
data/test/afdb_data/data_caches/train/1a02_F/a3m/: bfd_uniclust_hits.a3m  mgnify_hits.a3m  uniref90_hits.a3m
data/test/afdb_data/data_caches/train/1a02_F/hhr/: pdb70_hits.hhr
data/test/afdb_data/data_caches/train/1a0g_A/a3m/: bfd_uniclust_hits.a3m  mgnify_hits.a3m
data/test/afdb_data/data_caches/train/1a0g_A/hhr/: pdb70_hits.hhr
data/test/afdb_data/data_caches/train/1a2y_B/a3m/: bfd_uniclust_hits.a3m  mgnify_hits.a3m  uniref90_hits.a3m
data/test/afdb_data/data_caches/train/1a2y_B/hhr/: pdb70_hits.hhr
data/test/afdb_data/data_caches/train/1a3p_A/a3m/: bfd_uniclust_hits.a3m  mgnify_hits.a3m  uniref90_hits.a3m
data/test/afdb_data/data_caches/train/1a3p_A/hhr/: pdb70_hits.hhr
data/test/afdb_data/mmcifs/P01112/: AF-P01112-F1-model_v4.cif
data/test/data_caches/clusterings/: interface_cluster_mapping.csv
data/test/data_caches/msa/msas/: 209d-assembly1C_protein.a3m  7a4d-assembly1C_protein.a3m  7a4d-assembly1F_protein.a3m
data/test/data_caches/template/templates/: 721p-assembly1A_protein_pdball_230102_db.m8  7a4d-assembly1B_protein_pdball_230102_db.m8  7a4d-assembly1D_protein_pdball_230102_db.m8
data/test/pdb_data/data_caches/clusterings/: ligand_chain_cluster_mapping.csv  nucleic_acid_chain_cluster_mapping.csv  peptide_chain_cluster_mapping.csv
data/test/pdb_data/data_caches/msa/msas/: 721p-assembly1A_protein.a3m  7a4d-assembly1A_protein.a3m  7a4d-assembly1B_protein.a3m  7a4d-assembly1D_protein.a3m
data/test/pdb_data/mmcifs/21/: 721p-assembly1.cif
data/test/pdb_data/mmcifs/a4/: 7a4d-assembly1.cif
data/test/template/: 7a4d-assembly1E_protein_pdball_230102_db.m8
scripts/: cluster_pdb_mmcifs.py  cluster_pdb_test_mmcifs.py  cluster_pdb_train_mmcifs.py  cluster_pdb_val_mmcifs.py  distillation_data_download.sh  filter_pdb_mmcifs.py  filter_pdb_test_mmcifs.py  filter_pdb_train_mmcifs.py  filter_pdb_val_mmcifs.py  generate_mmcif_cache.py  reduce_uniprot_ids_to_pdb.py  reduce_uniprot_predictions_to_pdb.py  usage.py
tests/: alphafold3.yaml  conftest.py  test_af3.py  test_alphafold3.py  test_cli.py  test_config.py  test_configs.py  test_data_parsing.py  test_dataloading.py  test_datamodules.py  test_eval.py  test_input.py  test_msa_loading.py  test_readme.py  test_sweeps.py  test_template_loading.py  test_todo_modules.py  test_train.py  test_trainer.py  test_weighted_sampling.py  training.yaml
tests/configs/: alphafold3.yaml  trainer.yaml  trainer_with_atom_dataset.yaml  trainer_with_atom_dataset_created_from_pdb.yaml  trainer_with_pdb_dataset.yaml  trainer_with_pdb_dataset_and_weighted_sampling.yaml  trainer_without_model.yaml  training.yaml  training_with_pdb_dataset.yaml
