[project]
name = "alphafold3-pytorch"
version = "0.0.43"
description = "Alphafold 3 - Pytorch"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.8"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'protein structure prediction',
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
]

dependencies = [
    "beartype",
    "einops>=0.8.0",
    "einx>=0.2.2",
    "ema-pytorch>=0.4.8",
    "environs",
    "jaxtyping>=0.2.28",
    "lightning>=2.2.5",
    "taylor-series-linear-attention>=0.1.9",
    "torch>=2.1",
    "tqdm",
]

[project.urls]
Homepage = "https://pypi.org/project/alphafold3-pytorch/"
Repository = "https://github.com/lucidrains/alphafold3-pytorch"

[project.optional-dependencies]
examples = []
test = [
    "pytest"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.ruff]
line-length = 1000

ignore = [
    "F722", # for jaxtyping shape annotation
    "F401"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["alphafold3-pytorch"]
