[project]
name = "alphafold3-pytorch"
version = "0.2.52"
description = "Alphafold 3 - Pytorch"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.8"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'protein structure prediction',
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
]

dependencies = [
    "beartype",
    "biopython>=1.83",
    "CoLT5-attention>=0.11.0",
    "einops>=0.8.0",
    "einx>=0.2.2",
    "ema-pytorch>=0.5.0",
    "environs",
    "joblib",
    "gemmi>=0.6.6",
    "frame-averaging-pytorch>=0.0.18",
    "huggingface_hub>=0.21.4",
    "jaxtyping>=0.2.28",
    "lightning>=2.2.5",
    "numpy",
    "polars>=1.1.0",
    "pdbeccdutils>=0.8.5",
    "pydantic>=2.7.2",
    "pyyaml",
    "rdkit>=2023.9.6",
    "scikit-learn>=1.5.0",
    "shortuuid",
    "taylor-series-linear-attention>=0.1.9",
    "timeout_decorator>=0.5.0",
    'torch_geometric',
    "torch>=2.1",
    "tqdm>=4.66.4",
    "loguru",
]

[project.urls]
Homepage = "https://pypi.org/project/alphafold3-pytorch/"
Repository = "https://github.com/lucidrains/alphafold3-pytorch"

[project.optional-dependencies]
examples = []
test = [
    "pytest"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.ruff]
line-length = 1000

ignore = [
    "F722", # for jaxtyping shape annotation
    "F401"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["alphafold3_pytorch"]
