[project]
name = "alphafold3-pytorch"
version = "0.5.24"
description = "Alphafold 3 - Pytorch"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" },
    { name = "Alex Morehead", email = "alex.morehead@gmail.com"}
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'protein structure prediction',
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "adam-atan2-pytorch>=0.0.8",
    "beartype",
    "biopython>=1.83",
    "click>=8.1",
    "CoLT5-attention>=0.11.0",
    "einops>=0.8.0",
    "einx>=0.2.2",
    "ema-pytorch>=0.5.0",
    "environs",
    "lion-pytorch>=0.2.2",
    "joblib",
    "gemmi>=0.6.6",
    "fair-esm",
    "fastapi",
    "frame-averaging-pytorch>=0.0.18",
    "gradio",
    "gradio_molecule3d",
    "huggingface_hub>=0.21.4",
    "jaxtyping>=0.2.28",
    "lightning>=2.2.5",
    "numpy>=1.23.5",
    "polars>=1.1.0",
    "pdbeccdutils>=0.8.5",
    "pydantic>=2.8.2",
    "pyyaml",
    "rdkit>=2023.9.6",
    "retrying",
    "scikit-learn>=1.5.0",
    "scipy==1.13.1",
    "sentencepiece",
    "sh>=2.0.7",
    "shortuuid",
    "tensorboard",
    "taylor-series-linear-attention>=0.1.12",
    "torchtyping>=0.1.5",
    "timeout_decorator>=0.5.0",
    'torch_geometric',
    "torch>=2.1",
    "tqdm>=4.66.4",
    "transformers[torch]",
    "loguru",
]

[project.urls]
Homepage = "https://pypi.org/project/alphafold3-pytorch/"
Repository = "https://github.com/lucidrains/alphafold3-pytorch"

[project.optional-dependencies]
examples = []
test = [
    "ruff>=0.4.2",
    "pytest",
    "pytest-shard",
]

[project.scripts]
alphafold3_pytorch = "alphafold3_pytorch.cli:cli"
alphafold3_pytorch_app = "alphafold3_pytorch.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.ruff]
line-length = 1000

lint.ignore = [
    "F722", # for jaxtyping shape annotation
    "F401",
    "F821"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["alphafold3_pytorch"]
